Fixed horizontal scrolling for browsers without overlay scrolling

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 body {
+    overflow-x: hidden;
     margin: 0;
     background-color: black;
     color: white;
